--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -17,6 +17,7 @@ repositories {
 
 dependencies {
 	implementation "com.badlogicgames.gdx:gdx:1.12.0"
+	implementation "com.badlogicgames.gdx:gdx-platform:1.12.0:natives-desktop"
     implementation "com.badlogicgames.gdx:gdx-backend-headless:1.12.0"
     implementation "org.java-websocket:Java-WebSocket:1.5.4"
     implementation "com.jayway.jsonpath:json-path:2.8.0"
